version: 1.0.1 / fix: display 100vh on mobile devices

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -24,6 +24,7 @@
 }
 .header {
   height: 100vh;
+  height: calc(var(--vh, 1vh) * 100);
   background: url(../images/title.jpg) center/cover no-repeat;
   display: flex;
   flex-direction: column;
